# study

./: README.md
src/covgrid_slam_ros/: CMakeLists.txt  covgrid_slam_ros-config.cmake.in  package.xml
src/covgrid_slam_ros/config/: localmap.lua  preciseodometry.lua
src/covgrid_slam_ros/covgrid_slam/: INS_LIDAR_calibration.cpp  MotionModel.hpp  converttoearth.cpp  distortioncorrection.hpp  lidarodometrymain.cpp  multimapinteg.cpp  point_types.h  preciseodometrymain.cpp  transformmain.cpp
src/covgrid_slam_ros/covgrid_slam/common/: optimize_solver_options.cc  optimize_solver_options.h
src/covgrid_slam_ros/covgrid_slam/mapping/: collated_trajectory_builder.cc  collated_trajectory_builder.h  global_trajectory_builder_interface.h  id.h  imu_tracker.cc  imu_tracker.h  map_limits.h  pose_extrapolator.cc  pose_extrapolator.h  probability_grid.h  probability_values.cc  probability_values.h  range_data_inserter.cc  range_data_inserter.h  ray_casting.cc  ray_casting.h  submaps.h  trajectory_builder.h  trajectory_node.h  xy_index.h
src/covgrid_slam_ros/covgrid_slam/mapping3d/: ceres_pose.cc  ceres_pose.h  hybrid_grid.cc  hybrid_grid.h  local_trajectory_builder.cc  local_trajectory_builder.h  local_trajectory_builder_options.cc  local_trajectory_builder_options.h  motion_filter.cc  motion_filter.h  range_data_inserter.cc  range_data_inserter.h  submap_manager.cc  submap_manager.h  submaps.cc  submaps.h
src/covgrid_slam_ros/covgrid_slam/sensor/: collator.cc  collator.h  compressed_point_cloud.cc  compressed_point_cloud.h  data.h  data_type.h  odometry_data.h  ordered_multi_queue.cc  ordered_multi_queue.h  point_cloud.cc  point_cloud.h  range_data.cc  range_data.h  voxel_filter.cc  voxel_filter.h
src/covgrid_slam_ros/launch/: covgrid_slam_6t_pcap.launch  covgrid_slam_huachen.launch  covgrid_slam_kitti.launch  covgrid_slam_multilidar_pcap.launch  covgrid_slam_multirslidar_pcap.launch  covgrid_slam_multivelodyne.launch  covgrid_slam_multivelodyne_calibration.launch  covgrid_slam_multivelodyne_pcap.launch  covgrid_slam_pcap.launch  covgrid_slam_rslidar.launch  covgrid_slam_rslidar_record.launch  covgrid_slam_tang5.launch  covgrid_slam_velodyne.launch  covgrid_slam_withins.launch  extraction.launch  hector_loam_velodyne.launch  iv_perception-total.launch  iv_perception1-RAY.launch  iv_perception1-beiqi.launch  iv_perception1.launch  iv_perception1_bag.launch  iv_perception1_pcap.launch
src/covgrid_slam_ros/rviz_cfg/: calibration.rviz  covgrid_velodyne_driver.rviz
src/covgrid_slam_ros/urdf/: multirslidar_3d-left.urdf  multivelodyne_3d.urdf  multivelodyne_3d_US.urdf  rslidar_3d.urdf  velodyne_3d.urdf
src/iv_slam_mapping/: CMakeLists.txt  iv_slam_mapping-config.cmake.in  package.xml
src/iv_slam_mapping/cmake/: functions.cmake
src/iv_slam_mapping/iv_slam_mapping/mapping/: collated_trajectory_builder.cc  collated_trajectory_builder.h  global_trajectory_builder_interface.h  map_builder.cc  map_builder.h  probability_values.cc  probability_values.h  submaps.h  trajectory_builder.cc  trajectory_builder.h
src/iv_slam_mapping/iv_slam_mapping/mapping_3d/: global_trajectory_builder.cc  global_trajectory_builder.h  hybrid_grid.h  local_trajectory_builder.cc  local_trajectory_builder.h  local_trajectory_builder_options.cc  local_trajectory_builder_options.h  range_data_inserter.cc  range_data_inserter.h  submaps.cc  submaps.h
src/iv_slam_mapping/iv_slam_mapping/sensor/: collator.cc  collator.h  compressed_point_cloud.cc  compressed_point_cloud.h  data.h  imu_data.h  odometry_data.h  ordered_multi_queue.cc  ordered_multi_queue.h  point_cloud.cc  point_cloud.h  range_data.cc  range_data.h  voxel_filter.cc  voxel_filter.h
src/iv_slam_mapping_ros/iv_slam_mapping_ros/: CMakeLists.txt  package.xml
src/iv_slam_mapping_ros/iv_slam_mapping_ros/iv_slam_mapping_ros/: CMakeLists.txt  msg_conversion.cc  msg_conversion.h  node.cc  node.h  node_constants.h  node_main.cc  node_options.cc  node_options.h  trajectory_options.cc  trajectory_options.h
src/iv_slam_mapping_ros/iv_slam_mapping_ros/launch/: Start_rciv_slam_fused.launch  Start_rciv_slam_fused_dynamic_object.launch  Start_rciv_slam_fused_mapping.launch  Start_rciv_slam_fused_odometry.launch  Start_rciv_slam_fused_travesable_area_extraction.launch  Start_travesable_area_extraction.launch  gpscovertor.launch  ivperception2.launch  ivperception3.launch
src/iv_slam_mapping_ros/iv_slam_mapping_ros/scripts/: tf_remove_frames.py
src/iv_slam_mapping_ros/iv_slam_mapping_ros/urdf/: multivelodyne_3d.urdf  (+1 more)
src/msgs/frontal_mmw_radar_msgs/: CMakeLists.txt  package.xml
src/msgs/iv_slam_ros_msgs/: CMakeLists.txt  package.xml
src/msgs/lrpn_slopeogm_msgs/: CMakeLists.txt  package.xml
src/msgs/object_msgs/: CMakeLists.txt  package.xml
src/msgs/singal_msgs/: CMakeLists.txt  package.xml
src/msgs/slopeogm_msgs/: CMakeLists.txt  package.xml
src/obstacle_detection/: CMakeLists.txt  mainpage.dox  package.xml
src/obstacle_detection/launch/: example.launch  negative_multivelodyne_pcap.launch
src/obstacle_detection/rviz_cfg/: calibration.rviz  covgrid_mapping.rviz  loam_velodyne.rviz
src/obstacle_detection/src/: back_obstacle_node.cpp  obstacle_detection.cpp  obstacle_detection.h  obstacle_detection_node.cpp
src/sensor_driver/sensor_driver/: CMakeLists.txt  package.xml  sensor_driver-config.cmake.in
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/launch/: lidar_filter_6t.launch  lidar_filter_beiqi.launch  lidar_filter_toyota.launch
src/sensor_fusion/src/: lidar_filter(calibrate).cpp  lidar_filter.cpp
src/traversable_area_extraction/: CMakeLists.txt
src/traversable_area_extraction/config/: traversable_area.lua  traversable_area.rviz
src/traversable_area_extraction/scripts/: bayers_update_simulation.py
src/traversable_area_extraction/test/: test_traversable_area_node.cpp  visualize_traversable_area_node.cpp
src/traversable_area_extraction/traversable_area_extraction/: bayes_updator.h  data_structure.h  node.cc  node.h  node_constant.h  node_options.cc  node_options.h  traversable_area_extraction_main.cc
(+332 files in other folders)
