<?xml version="1.0"?>

<package format="2">
  <name>iv_slam_mapping</name>
  <version>3.1.20190610</version>
  <description>
    iv_slam_mapping is a system that provides real-time simultaneous localization
    and mapping (SLAM) in 2D and 3D across multiple platforms and sensor
    configurations.
  </description>
  <maintainer email="ZackLiu3714@gmail.com">
    The IVRC Authors
  </maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>g++-static</build_depend>

  <!--<build_depend>python-sphinx</build_depend>-->

  <depend>boost</depend>
  <depend>ceres-solver</depend>
  <depend>eigen</depend>
  <depend>libcairo2-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>lua5.2-dev</depend>
  <depend>protobuf-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_driver_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>iv_slam_ros_msgs</depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>ivcommon</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
