<?xml version="1.0"?>
<package format="2">
  <name>sensor_fusion</name>
  <version>3.2.20190611</version>
  <description>The gps_lidar package</description>

  <maintainer email="bitzzh@qq.com">zzh</maintainer>
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>ivcommon</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>sensor_driver_msgs</build_depend>
  <exec_depend>sensor_driver_msgs</exec_depend>
  
  <export>
  </export>
</package>
